#2313 Adjusted Javadoc.