@@ -24,22 +24,26 @@ import java.util.List;
 import java.util.Optional;
 
 import static java.util.Collections.unmodifiableList;
-import static java.util.stream.Collectors.toList;
 
 /**
  * An entry point for transforming an EQL query to SQL.
  * <p>
- * Transformation of EQL into SQL happens in 4 stages:
+ * The transformation of EQL into SQL happens in 4 stages:
  * <ol>
- * <li> <b>Stage 0: parsing</b>. A {@linkplain ua.com.fielden.platform.eql.antlr.tokens.util.ListTokenSource sequence of EQL tokens}
- *      is transformed into a {@linkplain ResultQuery1 stage 1 AST}. See {@link ua.com.fielden.platform.eql.antlr.EqlCompiler}.
- * <li> <b>Stage 1: property resolution</b>. Properties are resolved to their respective sources.
+ * <li> <b>Stage 0: parsing</b>.
+ *      A {@linkplain ua.com.fielden.platform.eql.antlr.tokens.util.ListTokenSource sequence of EQL tokens} is transformed into a {@linkplain ResultQuery1 stage 1 AST}.
+ *      See {@link ua.com.fielden.platform.eql.antlr.EqlCompiler}.
+ * <li> <b>Stage 1: property resolution</b>.
+ *      Properties are resolved to their respective sources.
  *      An important part of this stage is the resolution of dot-notated properties.
- * <li> <b>Stage 2</b>: builds up all implicit table joins resulting from dot-expressions, substitutes calculated property names used in dot-expressions with their respective expressions.
- * <li> <b>Stage 3: SQL generation</b>. This stage also includes information needed to instantiate entities from the SQL query result.
+ * <li> <b>Stage 2: processing of dot-expressions</b>
+ *      Builds up implicit table joins that result from dot-expressions, substitutes calculated property names used in dot-expressions with their respective expressions.
+ * <li> <b>Stage 3: SQL generation</b>.
+ *      This stage also gathers the information, needed to instantiate entities from the SQL query result.
  * </ol>
  * For stages 1-3 there is a corresponding package, named {@code ua.com.fielden.platform.eql.stage$N}, where {@code $N} is the stage number.
- * Each package contains classes that comprise a stage-specific AST. These classes are named with a suffix that corresponds to their stage number.
+ * Each package contains classes that comprise a stage-specific AST.
+ * These classes are named with a suffix that corresponds to their stage number.
  * For example, {@code Prop1} represents a property in stage 1, and is a result of stage 0.
  *
  * @author TG Team
@@ -86,7 +90,7 @@ public class EqlQueryTransformer {
     }
 
     private static List<YieldedColumn> getYieldedColumns(final Yields3 model) {
-        return unmodifiableList(model.getYields().stream().map(yield -> new YieldedColumn(yield.alias(), yield.type(), yield.column())).collect(toList()));
+        return unmodifiableList(model.getYields().stream().map(yield -> new YieldedColumn(yield.alias(), yield.type(), yield.column())).toList());
     }
 
 }
